给这个小玩意儿, 提交到github上吧